# TitanFramework

./: .gitignore  CMakeLists.txt  README.md  firmware.map  makefile
core/: CMakeLists.txt  platform.h  titan.h  wiring.h
core/drivers/: delay.c  delay.h  gpio.c  gpio.h  gpio_defs.h  gpio_high_level.h  gpio_low_level.h  gpio_mid_level.h  i2c.c  i2c.h  i2c_defs.h  i2c_utils.h  interrupts.c  interrupts.h  interrupts_defs.h  uart.c  uart.h  uart_defs.h
core/mcus/: include.h  mcu_common.h
core/mcus/atmega32/: mcu_m32.c  mcu_m32.h
core/mcus/atmega328p/: mcu_m328p.c  mcu_m328p.h
core/utils/: loop_utils.h
src/: gpio_driver.c  gpio_driver.h  i2c_driver.h  isr_wiring.c  main.c  main.cpp  pin_wiring.c  pin_wiring.h  platform.h  portable.h  titan.h  wiring.c  wiring.h
src/drivers/: gpio.c  gpio.h  i2c.c  i2c.h  interrupts.c  interrupts.h
src/utils/: loop_utils.h  ringbuffer.h
